# GrabZilla20

./: .gitignore  CLAUDE.md  Grabzilla20_PRD_Final.md  README.md  TASKS.md  index.html  package-lock.json  package.json  test-urls.txt  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build-signed.sh  fix-advanced-modules.md  notarize-macos.sh  setup-dependencies.ps1  setup-dependencies.sh  sign-windows.ps1  simplified-test-plan.md  test-functionality.js  test-report.md
src/: App.tsx  main.tsx  secure_process.rs
src-tauri/: Cargo.toml  entitlements.plist  installer.nsi  tauri.conf.json
src-tauri/.claude/agents/: frontend-bug-checker.md  rust-backend-debugger.md
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  dependency_manager.rs  download_manager.rs  ffmpeg_controller.rs  lib.rs  security_manager.rs  update_manager.rs  url_parser.rs
src/components/: ConversionSettings.tsx  DependencyManager.tsx  DownloadQueue.tsx  DuplicateConfirmationModal.tsx  QueueItem.tsx  SecurityStatus.tsx  SettingsPanel.tsx  URLExtractionModal.tsx  URLInput.tsx
src/hooks/: useDownloads.ts
src/services/: tauri-api.ts
src/styles/: global.css  theme.ts
src/types/: index.ts
